testsuite/vir/error/error/compile/00_parse.trieste
vbcc
parse
(top
  {}
  (file
    (group
      (func)
      (globalid 5:@main)
      (lparen)
      (rparen)
      (:)
      (i32)
      (localid 2:$a)
      (=)
      (const)
      (i32)
      (int 2:99)
      (localid 4:$ref)
      (=)
      (ref)
      (localid 2:$a)
      (int 1:0)
      (ret)
      (localid 2:$a))))
